<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.funnyx6</groupId>
    <artifactId>jvm-doctor</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>JVM Doctor</name>
    <description>A powerful JVM diagnostic and monitoring tool</description>
    <url>https://github.com/funnyx6/jvm-doctor</url>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        
        <!-- Dependency versions -->
        <spring-boot.version>2.5.4</spring-boot.version>
        <picocli.version>4.7.5</picocli.version>
        <micrometer.version>1.7.10</micrometer.version>
        <jackson.version>2.12.5</jackson.version>
        <slf4j.version>1.7.32</slf4j.version>
        <junit.version>5.8.1</junit.version>
        <mockito.version>4.0.0</mockito.version>
    </properties>

    <modules>
        <module>jvm-doctor-core</module>
        <module>jvm-doctor-agent</module>
        <module>jvm-doctor-cli</module>
        <module>jvm-doctor-web</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            
            <!-- Picocli for CLI -->
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli</artifactId>
                <version>${picocli.version}</version>
            </dependency>
            
            <!-- Micrometer for metrics -->
            <dependency>
                <groupId>io.micrometer</groupId>
                <artifactId>micrometer-core</artifactId>
                <version>${micrometer.version}</version>
            </dependency>
            
            <!-- Jackson for JSON -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            
            <!-- Logging -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            
            <!-- Testing -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>funnyx6</id>
            <name>达闻西</name>
            <email>15158114013@163.com</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/funnyx6/jvm-doctor.git</connection>
        <developerConnection>scm:git:ssh://github.com/funnyx6/jvm-doctor.git</developerConnection>
        <url>https://github.com/funnyx6/jvm-doctor</url>
    </scm>
</project>